# crawdata

./: .gitignore  CAPTCHA_PROJECT_REPORT.md  compare_report.py  docker-compose.full.yml  jobs_32_full.json  start_all.ps1
layer2-data-engine/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mallory_demo.db-shm  pyproject.toml
layer2-data-engine/migrations/: env.py
layer2-data-engine/sample_data/: sample_records.json
layer2-data-engine/seed_data/: competitor_synthesis.json  kssl_product_specs.json  matchups.json  patents.json  watchlist_entities.json  watchlist_products.json  watchlist_tech_domains.json  watchlist_tenders.json
layer2-data-engine/src/mallory_engine/: __init__.py  config.py  db.py  main.py
layer2-data-engine/src/mallory_engine/api/: __init__.py  assistant.py  dashboard.py  graph.py  ingest.py  ops.py  serving.py
layer2-data-engine/src/mallory_engine/contracts/: __init__.py  ingest.py  serving.py
layer2-data-engine/static/: dashboard.html  dashboard_live.html
layer2-data-engine/tests/: conftest.py  test_confidence.py  test_extraction.py  test_graph.py  test_ingest_contract.py  test_synthesis.py  test_tender_scoring.py  test_trust_spine.py
layer2-data-engine/tests/eval/: properties.py  test_eval_live.py  test_eval_stub.py
layer2-data-engine/tests/eval/golden/: enrich.json  (+2 more)
orchestrator/: .env.example  .gitignore  README.md  pyproject.toml
orchestrator/seed_data/: test_targets.json
orchestrator/src/mallory_orchestrator/: __init__.py  api.py  config.py  crawler_client.py  db.py  jobgen.py  main.py  models.py  orchestrate.py  seed.py  sources.py
(+219 files in other folders)
