[project]
name = "mallory-engine"
version = "0.1.0"
description = "Mallory Layer 2 — Data Engineering service (ingestion + pipeline + serving API)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "alembic>=1.13",
    "httpx>=0.27",
    "networkx>=3.2",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = ["pytest>=8", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "live: hits a real LLM endpoint; skipped unless MALLORY_EVAL_LIVE=1",
]
